--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,13 @@ input::placeholder {
   opacity: 0.5;
 }
 
+.required {
+  color: red;
+  font-weight: bold;
+  margin-left: 5px;
+  opacity: 0.7;
+}
+
 .button-container {
   display: flex;
   justify-content: end;
