--- a/styles.css
+++ b/styles.css
@@ -112,3 +112,30 @@ label {
   background-position: calc(100% - 10px) center;
   background-size: 30px;
 }
+
+/* request.js succes message  */
+
+.success-message {
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0.9);
+  background-color: #4caf50;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  border-radius: 8px;
+  margin-top: 20px;
+  font-size: 18px;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);
+  transition:
+    opacity 1s ease,
+    visibility 0s linear 1s,
+    transform 1s ease;
+}
+
+.success-message.visible {
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1);
+  transition-delay: 0s;
+}
