--- a/styles.css
+++ b/styles.css
@@ -245,3 +245,12 @@ select:focus {
   width: 100%;
   margin-bottom: 20px;
 }
+
+/* not filled input message */
+
+.error-message {
+  color: red;
+  font-size: 13px;
+  margin-top: 4px;
+  font-weight: 300;
+}
