--- a/styles.css
+++ b/styles.css
@@ -106,11 +106,47 @@ label {
 
 /* input icons */
 
-#name {
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="%234CBB17" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="7" r="4"></circle><path d="M5.5 21a7 7 0 0 1 13 0"></path></svg>');
+.icon {
   background-repeat: no-repeat;
   background-position: calc(100% - 10px) center;
-  background-size: 30px;
+  background-size: 27px;
+}
+
+#name {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="%234CBB17" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="7" r="4"></circle><path d="M5.5 21a7 7 0 0 1 13 0"></path></svg>');
+}
+
+#last_name {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="%234CBB17" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"><path d="M12 19l7-7-4-4-7 7-3 3 4 4z"/><path d="M16 2l6 6-6-6z"/></svg>');
+}
+
+#email {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="%234CBB17" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M3 8l8.49 6.2a2.5 2.5 0 0 0 2.82 0L21 8M5 18h14a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2z"/></svg>');
+}
+
+#phone_number {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="%234CBB17" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M22 16.92v3a2 2 0 0 1-2.18 2A19.86 19.86 0 0 1 3.09 4.18 2 2 0 0 1 5 2h3a2 2 0 0 1 2 1.72 12.35 12.35 0 0 0 .65 2.82 2 2 0 0 1-.45 2.11L8.91 9.09a16 16 0 0 0 6 6l.44-.44a2 2 0 0 1 2.11-.45 12.35 12.35 0 0 0 2.82.65A2 2 0 0 1 22 16.92z"/></svg>');
+}
+
+#state {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="%234CBB17" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M12 21s6-4.686 6-11a6 6 0 1 0-12 0c0 6.314 6 11 6 11z"/><circle cx="12" cy="10" r="3"/></svg>');
+}
+
+#city {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="%234CBB17" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" viewBox="-2 0 24 24"><path d="M3 21V8a1 1 0 0 1 1-1h4V3h4v4h4a1 1 0 0 1 1 1v13M1 21h22"/><path d="M5 10h2v4H5zM11 14h2v4h-2zM17 12h2v6h-2z"/></svg>');
+}
+
+#date_of_birth {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="%234CBB17" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M8 3v4M16 3v4M4 7h16M4 11h16M4 15h8M4 19h16"/></svg>');
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  opacity: 0;
+}
+
+#gender {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -5 24 24" fill="none"  stroke="%234CBB17" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2a4 4 0 100 8 4 4 0 000-8zM16.24 7.76l4.52 4.52m0-4.52l-4.52 4.52"/></svg>');
+  background-size: 35px;
 }
 
 /* request.js succes message  */
