--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,10 @@ label {
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="%234CBB17" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M3 8l8.49 6.2a2.5 2.5 0 0 0 2.82 0L21 8M5 18h14a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2z"/></svg>');
 }
 
+#email.email-error {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="%23FF0000" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M3 8l8.49 6.2a2.5 2.5 0 0 0 2.82 0L21 8M5 18h14a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2z"/></svg>') !important;
+}
+
 #phone_number {
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="%234CBB17" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M22 16.92v3a2 2 0 0 1-2.18 2A19.86 19.86 0 0 1 3.09 4.18 2 2 0 0 1 5 2h3a2 2 0 0 1 2 1.72 12.35 12.35 0 0 0 .65 2.82 2 2 0 0 1-.45 2.11L8.91 9.09a16 16 0 0 0 6 6l.44-.44a2 2 0 0 1 2.11-.45 12.35 12.35 0 0 0 2.82.65A2 2 0 0 1 22 16.92z"/></svg>');
 }
