--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,10 @@ label {
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="%234CBB17" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M22 16.92v3a2 2 0 0 1-2.18 2A19.86 19.86 0 0 1 3.09 4.18 2 2 0 0 1 5 2h3a2 2 0 0 1 2 1.72 12.35 12.35 0 0 0 .65 2.82 2 2 0 0 1-.45 2.11L8.91 9.09a16 16 0 0 0 6 6l.44-.44a2 2 0 0 1 2.11-.45 12.35 12.35 0 0 0 2.82.65A2 2 0 0 1 22 16.92z"/></svg>');
 }
 
+#phone_number.phone-error {
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="%23FF0000" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M22 16.92v3a2 2 0 0 1-2.18 2A19.86 19.86 0 0 1 3.09 4.18 2 2 0 0 1 5 2h3a2 2 0 0 1 2 1.72 12.35 12.35 0 0 0 .65 2.82 2 2 0 0 1-.45 2.11L8.91 9.09a16 16 0 0 0 6 6l.44-.44a2 2 0 0 1 2.11-.45 12.35 12.35 0 0 0 2.82.65A2 2 0 0 1 22 16.92z"/></svg>');
+}
+
 #state {
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="%234CBB17" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"><path d="M12 21s6-4.686 6-11a6 6 0 1 0-12 0c0 6.314 6 11 6 11z"/><circle cx="12" cy="10" r="3"/></svg>');
 }
