--- a/styles.css
+++ b/styles.css
@@ -342,3 +342,10 @@ select.icon-filled {
 .form-element {
   flex: 1;
 }
+
+.error-message-global {
+  color: red;
+  font-size: 13px;
+  margin-top: 5px;
+  position: relative;
+}
